[gd_scene load_steps=3 format=2]

[ext_resource path="res://pause_menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/silkscreen.tres" type="DynamicFont" id=2]

[node name="pause_menu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 154.0
margin_top = 84.0
margin_right = 229.0
margin_bottom = 156.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="resume" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 75.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 2 )
text = "Resume"
flat = true

[node name="restart" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 75.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 2 )
text = "restart"
flat = true

[node name="level_select" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 75.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 2 )
text = "level select"
flat = true

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 75.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 2 )
text = "quit"
flat = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/level_select" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
